<resources>
    <string name="app_name">VTCNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chuyen_de_nong">Chuyên đề nóng</string>

    <string name="years_before">%d năm trước</string>
    <string name="months_before">%d tháng trước</string>
    <string name="days_before">%d ngày trước</string>
    <string name="hours_before">%d giờ trước</string>
    <string name="minutes_before">%d phút trước</string>

    <string name="trang_chu">Trang chủ</string>
    <string name="tin_moi">Tin mới</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="chia_se">Chia sẻ</string>

    //chitietalbum podcast
    <string name="text_readmore"> Xem thêm</string>
    <string name="text_hide"> Ẩn bớt</string>
    <string name="txt_same_category_aduio">Audio cùng thể loại</string>

    <string name="open_drawer">Opened drawer</string>
    <string name="close_drawer">Closed drawer</string>

    //nav drawer footer
    <string name="vtc_name">BÁO ĐIỆN TỬ VTC NEWS</string>
    <string name="cqcq">CQCQ: Đài Truyền hình KTS VTC</string>
    <string name="tong_bt">Tổng biên tập: </string>
    <string name="tong_bt_name">Ngô Văn Hải</string>
    <string name="vtc_addr">Tầng 12A, Tòa nhà 18 Tam Trinh, Hai Bà Trưng, TP.Hà Nội.</string>
    <string name="vtc_tel">024.3632.1588</string>
    <string name="vtc_email">toasoan@vtc.gov.vn</string>
    <string name="share">Chia sẻ</string>


    //article detail
    <string name="like">Thích %d</string>
    <string name="morearticle">Thêm thông tin</string>
    <string name="txt_same_category">Cùng chuyên mục</string>

    //comment
    <string name="comment">Bình luận</string>

    //Error
    <string name="nointernet">Không lấy được dữ liệu</string>
    <string name="noData">Dữ liệu đang được cập nhật</string>
    <string name="noOption">Chức năng đang được cập nhật</string>
    <string name="videoerr">Video lỗi, không thể mở</string>
    <string name="audioerr">Audio lỗi, không thể mở</string>

    //comment

    <string name="commentDialog">Gửi bình luận</string>
    <string name="btcanclecomment">Hủy</string>
    <string name="btsendcomment">Gửi</string>
    <string name="txt_send_succes">Gửi bình luận thành công</string>
    <string name="txt_wait_cm">Mời bạn  quay lại bài viết xem bình luận sau ít phút</string>
</resources>