<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvSendComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commentDialog"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        />
    <EditText
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Họ và tên"
        android:background="@drawable/comment_box_border"
        android:id="@+id/etFullName"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSendComment"/>
    <EditText
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:background="@drawable/comment_box_border"
        android:id="@+id/etEmail"
        app:layout_goneMarginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFullName"/>

    <Button
        android:id="@+id/btCancelCm"
        app:layout_constraintEnd_toStartOf="@id/btSendCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btcanclecomment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        />

    <Button
        android:id="@+id/btSendCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btsendcomment"
        app:layout_constraintStart_toEndOf="@id/btCancelCm"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>